feature : search transactions details